--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "norkunas/youtube-dl-php": "^1.0",
         "google/apiclient": "^2.0"
     },
+    "license": "MIT",
     "authors": [
         {
             "name": "Michael V.",
