--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "michaelbelgium/youtube-to-mp3",
     "description": "Convert and search youtube video's via your own API",
+    "type": "project",
     "require": {
         "norkunas/youtube-dl-php": "^1.0",
         "google/apiclient": "^2.0"
