--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3.3'
 services:
   yt-convert-service:
     environment:
-      - API_KEY=Insert your API key here from google
+      - API_KEY=YOUR_API_KEY_HERE
     build: .
     restart: unless-stopped
     volumes:
       - yt-api-webfiles:/var/www/html
     ports:
-      - '80:80'
+      - '8090:80'
 
 volumes:
   yt-api-webfiles:
