Change config defines to a class with constants, add psr-4

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
             "name": "Michael V.",
             "email": "michael@michaelbelgium.me"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "MichaelBelgium\\YoutubeConverter\\": "src/"
+        }
+    }
 }
