Require at least php 7.4

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Convert and search youtube video's via your own API",
     "type": "project",
     "require": {
+        "php": ">=7.4",
         "norkunas/youtube-dl-php": "^2.0",
         "google/apiclient": "^2.0"
     },
