Docker setup revamp, see notes 1. Added more files to dockerignore file, to reduce build context.
2. Added `.env` to handle environment vars in docker.

3.  Docker-compose now checks if API KEY is set.

4. Ability to change host port with environment var.

5.  Added entrypoint file to support the API_KEY setting

6. Updated Dockerfile and readme to reflect these changes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,20 @@
-version: '3.3'
+version: '3.9'
 services:
-  yt-convert-service:
+  convert-api:
+    env_file:
+      - .env
     environment:
-      - API_KEY=YOUR_API_KEY_HERE
+      # The environment variable is now set inside the .env file.
+      # If you don't have the file ".env", please make it and put 
+      # API_KEY={api key here}
+      # in it. 
+      - API_KEY=${API_KEY:?API_KEY variable is not set in .env!}
     build: .
     restart: unless-stopped
     volumes:
-      - yt-api-webfiles:/var/www/html
+      - yt-api-files:/var/www/html
     ports:
-      - '80:80'
+      - ${HOST_PORT:-80}:80
 
 volumes:
-  yt-api-webfiles:
+  yt-api-files:
