--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -25,3 +25,4 @@ jobs:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         stale-issue-message: "This issue is stale because it has been open for 30 days with no activity."
         close-issue-message: "This issue was closed because it has been inactive for 14 days since being marked as stale."
+        exempt-all-assignees: true
