Update composer packages
- with php 7.4
- removes finding yt-dlp as thats already been done in norkunas/youtube-dl-php

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": ">=7.4",
         "norkunas/youtube-dl-php": "^2.0",
-        "google/apiclient": "^2.0"
+        "google/apiclient": "^2.0",
+        "ext-json": "*"
     },
     "license": "MIT",
     "authors": [
