Replace Config.php with env variables

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,29 @@
+# ============== CONVERT SETTINGS ==============
+
+# The download directory for the application, relative to public directory.
+# A slash at the end is required.
+DOWNLOAD_FOLDER="download/"
+
+# The maximum allowed video length to download (in seconds). Set to 0 for no limit.
+DOWNLOAD_MAX_LENGTH=0
+
+# Enable logging. This also enables the logpage with an overview of all songs that have been converted
+ENABLE_LOG=0
+
+# Set a proxy for yt-dlp or youtube-dl
+PROXY=
+
+# The location of the cookies file, relative to the public directory, shouldn't be needed to change.
+# Create a cookies.txt file in the root of the project with Mozilla/Netscape formatted cookies. If it doesn't exist, no cookies will be used.
+#
+# Can be a solution for "Sign in to confirm you’re not a bot."
+#
+# https://github.com/yt-dlp/yt-dlp/wiki/FAQ#how-do-i-pass-cookies-to-yt-dlp
+# https://github.com/ytdl-org/youtube-dl/tree/master?tab=readme-ov-file#how-do-i-pass-cookies-to-youtube-dl
+COOKIE_FILE="../cookies.txt"
+
+# ============== SEARCH SETTINGS ==============
 API_KEY=
+MAX_RESULTS=10
+# ============== DOCKER SETTINGS ==============
 HOST_PORT=80
