--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -30,4 +30,4 @@ jobs:
       run: composer install --prefer-dist --no-progress
       
     - name: Run PHPstan
-      run: vendor/bin/phpstan analyse --error-format=github src/ public/
+      run: vendor/bin/phpstan analyse --error-format=github public/
