composer: Increase process timeout
This google/apiclient package takes way too long to unzip ??

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "phpstan/phpstan": "^2.0"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "process-timeout": 600
     }
 }
